<resources>
    <string name="app_name">FeedFit</string>
    <string name="app_name_long">Feed Fit</string>
    <string name="name">Imię</string>
    <string name="your_name">Twoje imię:</string>
    <string name="your_gender">Twoja płeć:</string>
    <string-array name="gender">
        <item>Mężczyzna</item>
        <item>Kobieta</item>
        <item>Helikopter Apache</item>
    </string-array>
    <string name="your_weight">Twoja waga (kg):</string>
    <string name="weight">Waga (kg)</string>
    <string name="age">Wiek</string>
    <string name="your_age">Twój wiek:</string>
    <string name="your_lifestyle">Twój tryb życia:</string>
    <string name="begin">Zaczynamy!</string>
    <string-array name="lifestyle">
        <item>Siedzący, brak aktywności fizycznej</item>
        <item>Siedzący, niewielka aktywność fizyczna</item>
        <item>Praca/Wysiłek fizyczny</item>
        <item>Duży wysiłek fizyczny</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="product">Produkt:</string>
    <string name="calories">Kalorie:</string>
    <string name="cancel">Anuluj</string>
    <string name="delete_product">Usuń produkt</string>
    <string name="delete_product_message">Czy na pewno chcesz usunąć ten produkt z listy?</string>
    <string name="yes">Tak</string>
    <string name="add_product">Dodaj produkt</string>
    <string name="product_name">Nazwa produktu</string>
    <string name="calories_value">Wartość kaloryczna</string>
    <string name="add">Dodaj</string>
    <string name="product_missing">Produktu którego szukasz nie ma na liście? Dodaj go sam:</string>
    <string name="your_height">Twój wzrost (cm)</string>
    <string name="yout_height_cm">Twój wzrost (cm)</string>
</resources>