<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="64dp"
                android:text="@string/app_name_long"
                android:textColor="@color/colorPrimary"
                android:textSize="48sp"
                android:textStyle="italic" />

            <View
                style="@style/Divider"
                android:layout_below="@+id/title"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp" />

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_alignStart="@+id/userName"
                android:layout_marginTop="48dp"
                android:text="@string/your_name"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userNameTextView"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@android:color/white"
                android:hint="@string/name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/genderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userName"
                android:layout_alignStart="@+id/gender"
                android:layout_marginTop="24dp"
                android:text="@string/your_gender"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/gender"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genderTextView"
                android:layout_centerHorizontal="true"
                android:entries="@array/gender"/>
            <View
                style="@style/DividerWhite"
                android:layout_below="@+id/gender"
                android:layout_width="200dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/weightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender"
                android:layout_alignStart="@+id/weight"
                android:layout_marginTop="24dp"
                android:text="@string/your_weight"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weightTextView"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@android:color/white"
                android:hint="@string/weight"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weight"
                android:layout_alignStart="@+id/age"
                android:layout_marginTop="24dp"
                android:text="@string/your_age"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/age"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ageTextView"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@android:color/white"
                android:hint="@string/age"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lifestyleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age"
                android:layout_alignStart="@+id/age"
                android:layout_marginTop="24dp"
                android:text="@string/your_lifestyle"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/lifestyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lifestyleTextView"
                android:layout_centerHorizontal="true"
                android:entries="@array/lifestyle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>
            <View
                style="@style/DividerWhite"
                android:layout_below="@+id/lifestyle"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp" />

            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lifestyle"
                android:layout_alignStart="@+id/age"
                android:layout_marginTop="24dp"
                android:text="@string/your_height"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/height"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heightTextView"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@android:color/white"
                android:hint="@string/yout_height_cm"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/begin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/begin"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_below="@+id/height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="50dp"/>
            <View
                style="@style/DividerWhite"
                android:layout_below="@+id/begin"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>